IDE suggested refactorings